--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 		<!-- Bootstrap core CSS -->
 		<link href="/css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
 	</head>
 
 	<body>
@@ -40,7 +42,7 @@
 						<div class="main-content">
 							
 									<h1>Очки виртуальной реальности <br> VR Box II от производителя за 2390 р!</h1>
-									<h3 class="main-subtitle">Бесплатная доставка по Москве! </h3>
+									<h2 class="main-subtitle">Бесплатная доставка по Москве! </h2>
 									<button class="btn button">Заказать vr box 2</button>
 							<div class="row">
 								<div class="col-lg-6">
@@ -88,7 +90,7 @@
 							</div>
 						</div>
 
-						<button class="btn button">выбрать комплектацию и Заказать vr box 2 </button>
+						<button class="btn button about-vrbox-button">выбрать комплектацию и Заказать vr box 2 </button>
 					</div>
 
 					<div class="col-lg-5">
@@ -101,12 +103,245 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
 
+		<section class="functions-vrbox">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						 <div class="functions-img">
+						 	<img src="img/functions_vrbox/ph1.png" alt="vrbox travel around world" class="functions-img-left">
+						 	<img src="img/functions_vrbox/diamond2.svg" alt="diamond icon" class="functions-img-diamond1">
+						 </div>
+						<div class="media functions-left">
+							  <img src="img/functions_vrbox/world_icon.png" class="mr-3" alt="...">
+							  <div class="media-body">
+							    <h5 class="mt-0 functions-title">Путешествия по миру с помощью <br> панорамного изображения!</h5> 
+							    <p>А также тест драйв автомобилей,<br> погружение на дно океана, полеты в космос,<br> виртуальный секс и многое другое. </p> 
+							  </div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="media functions-right">
+							  <img src="img/functions_vrbox/video-icon.png" class="mr-3" alt="...">
+							  <div class="media-body">
+							    <h5 class="mt-0 functions-title">Просмотр фильмов, сериалов и видео на Youtube</h5>
+							   <p> В совершенно новом формате 3D, как перед 6-ти метровым экраном! Также просмотр любых фильмов в формате 2D!</p> 
+							  </div>
+						</div>
+						 <div class="functions-img">
+							<img src="img/functions_vrbox/girl.png" alt="" class="functions-img-girl">
+						 	<img src="img/functions_vrbox/ph2.png" alt="vrbox video " class="functions-img-right">
+						 	<img src="img/functions_vrbox/diamon1.svg" alt="diamond icon" class="functions-img-diamond2">
+						 </div>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="order">
+			<div class="order-bg">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<div class="order-block">
+								<h2 class="title">Закажите VR BOX II <br>прямо сейчас</h2>
+								<p class="order-text">Только мы сотрудничаем с производителем и осуществляем прямые поставки с производства</p>
+								<div class="order-adventages">
+									<div class="order-adventage">
+										<img src="img/order/Watch.png" alt="watch icon">
+										<p>Принимаем заявки <br> 24 часа в сутки! <br> 7 дней в неделю!</p>
+									</div>
+									<div class="order-adventage">
+										<img src="img/order/Bag.png" alt="bag icon">
+										<p>Быстрая доставка и <br> оплата при получении</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="order-form">
+									<form action="" class="form">
+										<h3>Введите ваши данные и нажмите заказать</h3>
+										<input type="text" placeholder="Введите имя" >
+										<input type="text" placeholder="Введите телефон">
+										<button class="btn button">Заказать vr box 2</button>
+										<p>Перезвоним в течение 10 минут</p>
+									</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="functions-vrbox functions-vrbox_sport-game">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 functions-col-left">
+						 <div class="functions-img">
+						 	<img src="img/functions_vrbox/ph3.png" alt="vrbox travel around world" class="functions-img-left_sport">
+						 	<img src="img/functions_vrbox/diamond3.svg" alt="diamond icon" class="functions-img-diamond3">
+						 </div>
+						<div class="media functions-left">
+							  <img src="img/functions_vrbox/game.png" class="mr-3" alt="...">
+							  <div class="media-body">
+							    <h5 class="mt-0 functions-title">Играйте в игры с эффектом полного погружения! </h5> 
+							    <p>Полное погружение в игры на смартфоне, а так же на ПК через программу TRINUS.  </p> 
+							  </div>
+						</div>
+					</div>
+					<div class="col-lg-6 functions-col-right">
+						<div class="media functions-right">
+							  <img src="img/functions_vrbox/ball.png" class="mr-3" alt="...">
+							  <div class="media-body">
+							    <h5 class="mt-0 functions-title">Симуляция экстремальных видов спорта</h5>
+							   <p> Почувствуйте на себе эмоции от прыжка с парашютом или спуска на сноуборде со склона горы. </p> 
+							  </div>
+						</div>
+						 <div class="functions-img">
+						 	<img src="img/functions_vrbox/ph4.png" alt="vrbox video " class="functions-img-right_game">
+						 	<img src="img/functions_vrbox/diamond4.svg" alt="diamond icon" class="functions-img-diamond4">
+						 </div>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="how_work how_work_bg">
+			<div class="container">
+				<h2 class=" title title-center">Как это работает</h2>
+				<div class="row">
+					<div class="col-lg-3 how_work-column">
+						<img src="img/how_work/phone.png" alt="">
+						<div class="circle-border">
+							<span>1</span>
+						</div>
+						<p class="how_work-text">Скачай на смартфон приложения, игры, фильмы. </p>
+					</div>
+					<div class="col-lg-3 how_work-column">
+						<img src="img/how_work/watch.png" alt="">
+						<div class="circle-border">
+							<span>2</span>
+						</div>
+						<p class="how_work-text">Вставь смартфон в очки виртуальной реальности. </p>
+					</div>
+					<div class="col-lg-3 how_work-column">
+						<img src="img/how_work/glass.png" alt="">
+						<div class="circle-border">
+							<span>3</span>
+						</div>
+						<p class="how_work-text">Наслаждайся абсолютно непередаваемыми эмоциями. </p>
+					</div>
+					<div class="col-lg-3 how_work-column">
+						<img src="img/how_work/control_desk.png" alt="">
+						<div class="circle-border">
+							<span>4</span>
+						</div>
+						<p class="how_work-text">Управляй виртуальной реальностью bluetooth-пультом.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="compatibility">
+			<img class="diamond" src="img/compatibility/coub.svg" alt="">
+			<div class="container">
+				<h2 class="title">Совместимость очков</h2>
+				<div class="row">
+					<div class="col-lg-6 compatibility-versions">
+						<div class="row">
+							<div class="col-lg-4">
+								<div class="compatibility-version">
+									<img src="img/compatibility/iphone.png" alt="iphone">
+									<p>ios</p>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="compatibility-version">
+									<img src="img/compatibility/htc_one.png" alt="android">
+									<p>android</p>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="compatibility-version">
+									<img src="img/compatibility/Windows-10.png" alt="windows">
+									<p>windows</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 ">
+						<div class="compatibility-glasses">
+							<img src="img/compatibility/glasses.png" alt="glasses">
+							<p>VR BOX-2 подойдет для любой модели смартфона с диагональю экрана от 3.5 до 6 люйдмов.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="vr-real ">
+			<div class="opacity">
+				<div class="container">
+					<h2 class="title">Виртуальная реальность <br>в очках vr box</h2>
+					<a href="#">
+						<div class="vr-real-icon">
+							<img src="img/vr_real/play_market.png" alt="play market">
+						</div>
+					</a>
+					<a href="#"><p>Смотреть видео</p></a>
+				<div class="container"></div>
+			</div>
+		</section>
+
+		<section class="apps">
+			<div class="container">
+				<h2 class="title title-center">Более 100 игр и приложений для VR BOX II</h2>
+				<div class="apps-icons">
+					<img src="img/apps/a-icon.png" alt="" class="apps-icon">
+					<img src="img/apps/play.png" alt="" class="apps-icon">
+					<img src="img/apps/windows.png" alt="" class="apps-icon">
+				</div>
+				<div class="apps-descriptions">
+				  <div class="apps-description">
+				  	<img src="img/apps/iPhone-6S-Gold.png" alt="img app">
+				  	<h4>Titans of Space</h4>
+				  	<p>Бесплатное приложение «Titans of Space» позволит вам совершить виртуальную поездку по нашей солнечной системе. При этом вы получите много интересной информации о небесных телах. </p>
+				  </div>
+				  <div class="apps-description">
+				  	<div class="apps-img">
+				  		<img src="img/apps/EL-16_blaster.png" alt="img app">
+				  		<img class="blaster" src="img/apps/blaster1.png" alt="">
+				  	</div>
+				  	<h4>Zombie Shooter</h4>
+				  	<p>Одна из популярных игр «Zombie Shooter VR» В ней вы истребляете полчища зомби, исследуете темные пещеры и заброшенные шахты. </p>
+				  </div>
+				  <div class="apps-description">
+				  	<img src="img/apps/iphone3.png" alt="img app">
+				  	<h4>Sisters</h4>
+				  	<p>Игра «Sisters» имеет форму интерактивного фильма ужасов для Android-устройств: вы находитесь в гостиной, где можете осмотреться. При этом вокруг вас происходят странные вещи. </p>
+				  </div>
+				</div>
+				<button class="btn button">Заказать vr box 2</button>
+			</div>
+		</section>
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="js/bootstrap.js"></script>
+		<script type="text/javascript" src="js/slick.min.js"></script>
+
+		<script>
+			$(document).ready(function(){
+			  $('.apps-descriptions').slick({
+			    infinite: true,
+  				slidesToShow: 3,
+  				slidesToScroll: 1
+			  });
+			});
+		</script>
 	</body>
 </html>
