--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,8 @@
 	<title>Vr Box</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/all_styles.css">
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
-	<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/all.css">
 </head>
 
 <body>
@@ -600,140 +596,7 @@
 		</div>
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="js/jquery-3.4.1.js"></script>
-		<script src="js/bootstrap.js"></script>
-		<script type="text/javascript" src="js/slick.js"></script>
-		<script src="js/wow.min.js"></script>
-		<script src="js/jquery.mask.js"></script>
-		<script src="js/rellax.js"></script>
+		<script src="js/all.js"></script>
 
-		<script>
-		  // Accepts any class name
-		  var rellax = new Rellax('.rellax');
-		</script>
-
-		<script>
-			jQuery(function($){
-			   $(".phone").mask("+7(999) 999-99-99");
-			});
-		</script>
-
-		<script>
-			wow =  new WOW({
-				mobile: false
-			});
-            wow.init();
-        </script>
-
-		<script>
-			$(document).ready(function(){
-				$('.header-btn').on('click', function(event) {
-					event.preventDefault();
-					/* Act on the event */
-					$('.popup-order_phone').fadeIn();	
-				});
-
-				$('.btn-order_vrbox, .button-order').on('click', function(event) {
-					event.preventDefault();
-					/* Act on the event */
-					$('.popup-order_vrbox').fadeIn();	
-				});
-
-				$('.about-vrbox-button').on('click', function(event) {
-					event.preventDefault();
-					/* Act on the event */
-					$('.popup-order').fadeIn();	
-				});
-
-				$('.play_video-vrbox').on('click', function(event) {
-					event.preventDefault();
-					/* Act on the event */
-					$('.video').fadeIn();	
-				});
-
-
-				$('.cross').on('click', function(event) {
-					event.preventDefault();
-					/* Act on the event */
-					$('.popup').fadeOut();
-				});
-
-
-				$('.apps-descriptions').slick({
-					infinite: true,
-					slidesToShow: 3,
-					slidesToScroll: 1,
-					arrows:true,
-					responsive: [
-					    {
-					      breakpoint: 991,
-					      settings: {
-					        slidesToShow: 1,
-					        slidesToScroll: 1,
-					        prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-chevron-left"></i></button>',
-					        nextArrow: '<button type="button" class="slick-next"><i class="fas fa-chevron-right"></i></button>'
-					      }
-					    },
-					    {
-					      breakpoint: 767,
-					      settings: {
-					        slidesToShow: 1,
-					        slidesToScroll: 1,
-					        prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-chevron-left"></i></button>',
-					        nextArrow: '<button type="button" class="slick-next"><i class="fas fa-chevron-right"></i></button>'
-					      }
-					    },
-					    {
-					      breakpoint: 575,
-					      settings: {
-					        slidesToShow: 1,
-					        slidesToScroll: 1,
-					        prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-chevron-left"></i></button>',
-					        nextArrow: '<button type="button" class="slick-next"><i class="fas fa-chevron-right"></i></button>'
-					      }
-					    }
-					]
-				});
-				$('.feedback-slider').slick({
-					infinite: true,
-					slidesToShow: 2,
-					slidesToScroll: 1,
-					rows: 2,
-					arrows:true,
-					responsive: [
-					    {
-					      breakpoint: 991,
-					      settings: {
-					        slidesToShow: 1,
-					        slidesToScroll: 1,
-					        rows: 1,
-					        prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-chevron-left"></i></button>',
-					        nextArrow: '<button type="button" class="slick-next"><i class="fas fa-chevron-right"></i></button>'
-					      }
-					    },
-					    {
-					      breakpoint: 767,
-					      settings: {
-					        slidesToShow: 1,
-					        slidesToScroll: 1,
-					        rows: 1,
-					        prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-chevron-left"></i></button>',
-					        nextArrow: '<button type="button" class="slick-next"><i class="fas fa-chevron-right"></i></button>'
-					      }
-					    },
-					    {
-					      breakpoint: 575,
-					      settings: {
-					        slidesToShow: 1,
-					        slidesToScroll: 1,
-					        rows: 1,
-					        prevArrow: '<button type="button" class="slick-prev"><i class="fas fa-chevron-left"></i></button>',
-					        nextArrow: '<button type="button" class="slick-next"><i class="fas fa-chevron-right"></i></button>'
-					      }
-					    }
-					]
-				});
-			});
-		</script>
 	</body>
 	</html>
