--- a/src/thanks.html
+++ b/src/thanks.html
@@ -6,11 +6,8 @@
 
 	<title>Спасибо за заявку</title>
 
-	<link href="/css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/all_styles.css">
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
-	<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
-	<link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 	<main class="main main-thanks">
@@ -52,10 +49,7 @@
 	</main>
 
 
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  				integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  				crossorigin="anonymous"></script>
-	<script src="js/bootstrap.js"></script>
+		<script src="js/all.js"></script>
 
 </body>
 </html>
