add atribute defer for script

--- a/src/index.html
+++ b/src/index.html
@@ -610,7 +610,7 @@
 		</div>
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="js/all.js"></script>
+		<script src="js/all.js" defer></script>
 
 	</body>
 	</html>
